# kavak-clone

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  pyproject.toml
app/configs/: cors.py  database.py  env_configs.py  jwt.py
app/controllers/: cars_controller.py  login_controller.py  user_controller.py
app/exceptions/: invalid_id_exception.py  request_data_exceptions.py  user_exceptions.py
app/models/: cars_model.py  user_model.py
app/routes/: __init__.py  cars_blueprint.py  login_blueprint.py  user_blueprint.py
app/services/: general_services.py
migrations/versions/: 1b095a1023a5_.py  d1bced5b2a31_.py
