[tool.poetry]
name = "kavak-backend"
version = "0.1.0"
description = ""
authors = ["Cristian Tacca <88325995+CristianTacca@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "kavak_backend"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
